fix: min height of articles changed to prevent some elements covering others

--- a/src/components/AboutBlog/styles/aboutBlog.scss
+++ b/src/components/AboutBlog/styles/aboutBlog.scss
@@ -29,7 +29,7 @@
 .blog article {
   width: 100%;
   height: auto;
-  min-height: 350px;
+  min-height: 400px;
   padding: 32px 16px 24px;
   overflow: hidden;
 
